# agentforce-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  main.py  nixpacks.toml  pyproject.toml  requirements.txt  servers.yaml  servers.yaml.example
.github/workflows/: python-static-analysis.yml  python-tests.yml
client-examples/: langchain_client.py  low_level_client.py  stripe_client.py
examples/: langchain_client.py  low_level_client.py
mcp_gen/: file_watcher.py  openapi.py  server_manager.py  tools.py
mcp_openapi/: file_watcher.py  parser.py  proxy.py  recorder.py  server_manager.py  tools.py
scripts/: README.md  cli.py  make-mcp  slim-openapi  slim-openapi.py
scripts/servers/: httpbin.py  stripe.py  zendesk.py
scripts/templates/: server.py.j2
test-specs/: httpbin.yaml  stripe-customers.yaml
tests/: test_parser.py  test_proxy.py  test_tools.py
