[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiopenapi3>=0.8.0",
    "black>=25.1.0",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.5.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "watchdog>=3.0.0",
]

[tool.setuptools]
packages = ["mcp_gen"]
