[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-openapi"
version = "0.1.0"
description = "Expose OpenAPI servers via MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiopenapi3>=0.8.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "watchdog>=3.0.0",
]

[tool.setuptools]
packages = ["mcp_openapi"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.14.1",
    "ruff>=0.1.1",
    "pytest>=8.3.5",
]
